--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -13,8 +13,8 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, maxos-latest]
-        python-version: 3.11
-        pytorch-version: 1.12.0
+        python-version: "3.11"
+        pytorch-version: "1.12.0"
 
     steps:
     - name: Checkout
@@ -22,7 +22,7 @@ jobs:
     - name: Set up Python 3.11
       uses: actions/setup-python@v2
       with:
-        python-version: 3.11
+        python-version: ${{ matrix.python-version }}
 
     - name: Get pip cache dir
       id: pip-cache
