--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -13,8 +13,8 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, maxos-latest]
-        python-version: "3.11"
-        pytorch-version: "1.12.0"
+        python-version: ["3.11"]
+        pytorch-version: ["1.12.0"]
 
     steps:
     - name: Checkout
