--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -46,3 +46,9 @@ jobs:
       run: |
         pip install pytest
         pytest -v
+
+- uses: iterative/setup-dvc@v1
+- name: Get data
+  run: dvc pull
+  env:
+    GDRIVE_CREDENTIALS_DATA: ${{ secrets.GDRIVE_CREDENTIALS_DATA }}
