--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -8,7 +8,6 @@ on:
 
 jobs:
   build:
-
     runs-on: ${{ matrix.os }} 
     strategy:
       matrix:
@@ -47,8 +46,8 @@ jobs:
         pip install pytest
         pytest -v
 
-  - uses: iterative/setup-dvc@v1
-  - name: Get data
-    run: dvc pull
-    env:
-      GDRIVE_CREDENTIALS_DATA: ${{ secrets.GDRIVE_CREDENTIALS_DATA }}
+  # - uses: iterative/setup-dvc@v1
+  # - name: Get data
+  #   run: dvc pull
+  #   env:
+  #     GDRIVE_CREDENTIALS_DATA: ${{ secrets.GDRIVE_CREDENTIALS_DATA }}
