--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -9,7 +9,7 @@ jobs:
       - name: Train model
         run: |
           pip install -r requirements.txt  # install dependencies
-          python train.py  # run training
+          python cnn_mnist/train_cml.py  # run training
       - name: Write report
         env:
           # this authenticates that the right permissions are in place
