--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -1,4 +1,4 @@
-name: train-my-model
+name: DVC & train-my-model 
 on: [push]
 jobs:
   run:
@@ -6,9 +6,11 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: iterative/setup-cml@v1
-      - name: Train model
+      - uses: iterative/setup-dvc@v1
+      - name: Train model & download data
         run: |
           pip install -r requirements.txt  # install dependencies
+          dvc pull data --run-cache
           python cnn_mnist/train_cml.py  # run training
       - name: Write report
         env:
