--- a/.github/workflows/cml_dvc_cache.yaml
+++ b/.github/workflows/cml_dvc_cache.yaml
@@ -11,7 +11,6 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: iterative/setup-cml@v1
-      - uses: iterative/setup-dvc@v1
 
       - name: Get pip cache dir
         id: pip-cache
@@ -32,9 +31,11 @@ jobs:
           pip install -r requirements.txt
           pip install -r requirements_tests.txt
 
-      - name: Download data
-        run: |          
-          dvc pull data 
+      - uses: iterative/setup-dvc@v1
+      - name: Get data
+        run: dvc pull
+        env:
+            GDRIVE_CREDENTIALS_DATA: ${{ secrets.GDRIVE_CREDENTIALS_DATA }}
 
       - name: Train model 
         run: |          
