Only cat classification_report.txt

--- a/.github/workflows/cml_dvc_cache.yaml
+++ b/.github/workflows/cml_dvc_cache.yaml
@@ -47,6 +47,8 @@ jobs:
           REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           # send all information to report.md that will be reported to us when the workflow finish
-          cat classification_report.txt >> report.md
-          cml-publish confusion_matrix.png --md >> report.md
-          cml-send-comment report.md
+          cat classification_report.txt >> report.md          
+          
+
+# cml-publish confusion_matrix.png --md >> report.md
+# cml-send-comment report.md
