--- a/.github/workflows/cml_dvc_cache.yaml
+++ b/.github/workflows/cml_dvc_cache.yaml
@@ -48,6 +48,7 @@ jobs:
         run: |
           # send all information to report.md that will be reported to us when the workflow finish
           cat classification_report.txt >> report.md
+          cml publish confusion_matrix --md >> report.md
           cml comment create report.md
 
 # cml-publish confusion_matrix.png --md >> report.md
